--- a/src/application/Main_Menu.fxml
+++ b/src/application/Main_Menu.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+
 <AnchorPane fx:id="kokMain" prefHeight="410.0" prefWidth="450.0" styleClass="anchorpane" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
       <AnchorPane fx:id="kokRapor" prefHeight="500.0" prefWidth="500.0" styleClass="anchorpane">
@@ -18,7 +19,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <PieChart fx:id="piachart" layoutY="30.0" prefHeight="500.0" prefWidth="500.0" />
+            <PieChart fx:id="piachart" layoutY="30.0" prefHeight="500.0" prefWidth="500.0" styleClass="piechart" />
             <Button fx:id="kok_raporlama_geri" layoutX="452.0" layoutY="288.0" mnemonicParsing="false" prefHeight="220.0" prefWidth="42.0" styleClass="button2" text="Geri" />
             <Button fx:id="kok_raporlama_kpt" layoutX="452.0" layoutY="35.0" mnemonicParsing="false" prefHeight="220.0" prefWidth="42.0" styleClass="button3" text="Kpt" />
          </children>
@@ -62,16 +63,16 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="textad" layoutX="176.0" layoutY="125.0" />
-            <Label layoutX="176.0" layoutY="101.0" text="Ad" />
-            <TextField fx:id="textsoyad" layoutX="176.0" layoutY="197.0" />
-            <Label layoutX="176.0" layoutY="172.0" text="Soyad" />
-            <TextField fx:id="textnumara" layoutX="176.0" layoutY="261.0" />
+            <TextField fx:id="textad" layoutX="176.0" layoutY="125.0"/>
+            <Label layoutX="176.0" layoutY="101.0" text="Ad"/>
+            <TextField fx:id="textsoyad" layoutX="176.0" layoutY="197.0"/>
+            <Label layoutX="176.0" layoutY="172.0" text="Soyad"/>
+            <TextField fx:id="textnumara" layoutX="176.0" layoutY="261.0"/>
             <Label layoutX="176.0" layoutY="236.0" text="Numara" />
-            <TextField fx:id="textvize" layoutX="176.0" layoutY="318.0" />
+            <TextField fx:id="textvize" layoutX="176.0" layoutY="318.0"/>
             <Label layoutX="180.0" layoutY="295.0" text="Vize" />
-            <TextField fx:id="textfinal" layoutX="176.0" layoutY="375.0" />
-            <Label layoutX="176.0" layoutY="351.0" text="Final" />
+            <TextField fx:id="textfinal" layoutX="176.0" layoutY="375.0"/>
+            <Label layoutX="176.0" layoutY="351.0" text="Final"/>
             <Button layoutX="335.0" layoutY="125.0" mnemonicParsing="false" onAction="#kayitet" prefHeight="274.0" prefWidth="42.0" styleClass="button1" text="Kayit" />
             <Button fx:id="kok_kayit_geri" layoutX="123.0" layoutY="124.0" mnemonicParsing="false" prefHeight="274.0" prefWidth="42.0" styleClass="button2" text="Geri" />
             <Button fx:id="kok_kayit_kpt" layoutX="123.0" layoutY="403.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="255.0" styleClass="button3" text="Kapat" />
@@ -95,7 +96,7 @@
          <children>
             <Label alignment="CENTER" layoutY="-2.0" prefWidth="500.0" text="Çıktı İşlemleri" textFill="#f3ffa8">
                <font>
-                  <Font size="20.0" />
+                  <Font size="20.0"/>
                </font>
             </Label>
          </children>
