--- a/bin/application/Main_Menu.fxml
+++ b/bin/application/Main_Menu.fxml
@@ -98,9 +98,18 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="kok_cikti_durum" layoutX="20.0" layoutY="181.0" text="Label" wrapText="true" />
+            <Label fx:id="kok_cikti_durum" layoutX="20.0" layoutY="181.0" text="Label" wrapText="true">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
             <Button fx:id="kok_cikti_ac" layoutX="257.0" layoutY="461.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="213.0" styleClass="button3" text="Dosyayı Aç" />
             <Button fx:id="kok_cikti_geri" layoutX="20.0" layoutY="461.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="200.0" styleClass="button2" text="Geri" />
+            <Label layoutX="20.0" layoutY="292.0" text="Dosyayı açmak için Dosyayı Aç butonunu kullanın" wrapText="true">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
